--- a/OCCMobileExample2/res/layout/main.xml
+++ b/OCCMobileExample2/res/layout/main.xml
@@ -1,19 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_height="fill_parent" android:layout_width="fill_parent" android:weightSum="1" android:orientation="vertical">
-  <LinearLayout
-      android:id="@+id/TorusData"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content" android:orientation="vertical">
-      <TextView android:text="Input data for Torus:"
-        android:textSize="15sp" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
-      <EditText android:layout_height="wrap_content" android:id="@+id/value1"
-        android:hint="Value R" android:layout_width="fill_parent" android:inputType="number"></EditText>
-      <EditText android:layout_height="wrap_content" android:id="@+id/value2"
-        android:hint="Value r" android:layout_width="fill_parent" android:inputType="number"></EditText>
-  </LinearLayout>
-  <TextView android:layout_height="wrap_content" android:text="$result"
-    android:textSize="14sp" android:id="@+id/result" android:layout_width="fill_parent" android:layout_weight="0.32"></TextView>
+  android:weightSum="1" android:orientation="vertical" 
+  android:layout_width="fill_parent" 
+  android:background="@color/grayC0C0C0" 
+  android:layout_height="fill_parent">
+  <RelativeLayout
+      android:id="@+id/torusData"
+      android:layout_height="wrap_content" 
+      android:orientation="vertical" 
+      android:layout_width="fill_parent" 
+      android:background="@color/grayC0C0C0">
+      <TextView android:id="@+id/TextView1" 
+      	android:layout_alignParentLeft="true" 
+      	android:layout_alignParentTop="true" 
+      	android:text="Input data for Torus:"
+      	android:textSize="20sp" 
+      	android:layout_height="wrap_content" 
+      	android:layout_width="wrap_content"/>
+      <EditText android:layout_alignParentLeft="true" 
+      	android:layout_below="@+id/TextView1" 
+      	android:id="@+id/value1"
+      	android:hint="Value R" 
+      	android:inputType="number" 
+      	android:layout_height="wrap_content" 
+      	android:layout_width="fill_parent">
+      <requestFocus></requestFocus>
+      </EditText>
+      <EditText android:layout_alignParentLeft="true" 
+      	android:layout_below="@+id/value1" 
+      	android:layout_height="wrap_content" 
+      	android:id="@+id/value2"
+      	android:hint="Value r" 
+      	android:inputType="number" 
+      	android:layout_width="fill_parent">
+      </EditText>
+      <FrameLayout android:id="@+id/frameLayout1" 
+      	android:layout_height="wrap_content" 
+      	android:layout_width="wrap_content" 
+      	android:layout_alignParentTop="true" 
+      	android:layout_alignParentLeft="true">
+      </FrameLayout>
+  </RelativeLayout>
+  <TextView android:text="$result"
+    android:textSize="24sp" 
+    android:id="@+id/result" 
+    android:layout_width="fill_parent" 
+    android:background="@color/grayC0C0C0" 
+    android:layout_height="117dp" 
+    android:gravity="right" 
+    android:layout_weight="1">
+  </TextView>
   <Button android:id="@+id/buttonCalc"
-    android:text="Calculate Volume" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
+    android:text="Calculate Volume" 
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content">
+  </Button>
 </LinearLayout>
